Temporary padding solution for mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ html, body{
         flex-direction: column;
         align-items: center;
     
+        height: 100%;
+
         background-color: #272838;
         color: white;
     
@@ -24,10 +26,7 @@ html, body{
         overflow-x: hidden;
         overflow-y: hidden;
     
-        padding-top: 10vh;
-        padding-bottom: 10vh;
-        padding-left: 10vw;
-        padding-right: 10vw;
+        padding: 2%;
     }
 }
 @media (min-aspect-ratio: 3/4){
