--- a/styles/menuStyle.css
+++ b/styles/menuStyle.css
@@ -15,8 +15,8 @@ Also possible:
         width: 85%;
         height: auto;
 
+        margin-bottom: 3vh;
         align-self: flex-start;
-
         overflow-y: hidden;
 
         z-index: 10;
@@ -71,6 +71,7 @@ Also possible:
         border-style: solid;
     }
 }
+/*Desktop Orientation*/
 @media (min-aspect-ratio: 3/4){
     #pageBody__projectBar{
         display: flex;
