--- a/styles/style.css
+++ b/styles/style.css
@@ -70,15 +70,32 @@ h1{
     text-align: center;
     font-size: 3rem;
 }
-h2{
-    text-align: center;
-    font-size: 2.5rem;
-    line-height: 2.5rem;
 
-    font-weight: 400;
-    letter-spacing: 0.15rem;
-
-    text-align: left;
+/*Mobile orientation*/
+@media (max-aspect-ratio: 3/4){
+    h2{
+        text-align: center;
+        font-size: 2rem;
+        line-height: 2rem;
+    
+        font-weight: 400;
+        letter-spacing: 0.15rem;
+    
+        text-align: left;
+    }
+}
+/*Desktop orientation*/
+@media (min-aspect-ratio: 3/4){
+    h2{
+        text-align: center;
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+    
+        font-weight: 400;
+        letter-spacing: 0.15rem;
+    
+        text-align: left;
+    }
 }
 
 .title{
