--- a/styles/menuStyle.css
+++ b/styles/menuStyle.css
@@ -29,7 +29,7 @@ Also possible:
         border-right: 1px solid white;
         margin: 0;
         margin-bottom: 2vh;
-        width: 100%;
+        padding-right: 2vw;
     }
     #pageBody__projectBar__wrapper{
         overflow-x: scroll;
@@ -87,7 +87,9 @@ Also possible:
         border-bottom: 1px solid white;
         margin: 0;
         margin-bottom: 2vh;
+        padding-bottom: 1vh;
         width: 100%;
+        text-align: center;
     }
     
     .project-menu-button{
@@ -156,7 +158,7 @@ Also possible:
     transition-duration: 0.1s;
 
     cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 #navMenu__home{
     color: white;
@@ -189,6 +191,6 @@ a{
     z-index: 10;
 }
 .copyrightText{
-    font-size: 0.8rem;
-    line-height: 0.8rem;
+    font-size: 1rem;
+    line-height: 1rem;
 }
